--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,11 @@
         <item>RAK City</item>
         <item>Fujairah</item>
     </string-array>
+    <string-array name="insurance_company">
+        <item>Safety Insurance Company</item>
+        <item>Ifco Tokyo</item>
 
+    </string-array>
     <string-array name="vechiel_type">
         <item>Auris (Toyota)</item>
         <item>Avensis (Toyota)</item>
@@ -46,6 +50,7 @@
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
+    <string name="vehicle_not_selected">Please add atleast one vehicle</string>
     <string name="action_settings">Settings</string>
     <string name="alert_driver_profile1">you will receive a legal contract of this company from the admin on your registerd e-mail id.</string>
     <string name="alert_driver_profile2">Have you received an e-mail from the admin regarding the company permission. If yes then select otherwise select no.Once you confirm admin will also come to know about the same</string>
@@ -62,6 +67,7 @@
 
     <string name="home_second">Home Second</string>
     <string name="terms">Terms &amp; Conditions</string>
+    <string name="save">Save &amp; Submit</string>
     <string name="invite">Invite &amp; Earn</string>
 
 </resources>
